switch to json5 for game files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
 		"release": "release-it"
 	},
 	"release-it": {
-		"github": {"release": true},
-		"npm": {"publish": false}
+		"github": {
+			"release": true
+		},
+		"npm": {
+			"publish": false
+		}
 	},
 	"exports": {
 		".": {
@@ -35,7 +39,7 @@
 		"@sveltejs/package": "^2.0.0",
 		"autoprefixer": "^10.4.15",
 		"iconify-icon": "^1.0.8",
-		"jsonc-parser": "^3.2.0",
+		"json5": "^2.2.3",
 		"postcss": "^8.4.28",
 		"publint": "^0.1.9",
 		"release-it": "^16.2.1",
