--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"prepare": "npm run package",
-		"package": "svelte-kit sync && svelte-package && publint",
+		"package": "svelte-kit sync && svelte-package && postcss src/app.css -o dist/styles.css && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -33,6 +33,7 @@
 		"iconify-icon": "^1.0.8",
 		"json5": "^2.2.3",
 		"postcss": "^8.4.28",
+		"postcss-cli": "^10.1.0",
 		"publint": "^0.1.9",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
