explicitely mark where to generate combinations instead of incomplete heuristic for now

--- a/static/games/micropoker.json5
+++ b/static/games/micropoker.json5
@@ -13,9 +13,9 @@
 
 	// the actual cards, 16 in total
 	"cards": [
-		{"class": "{{suits.red}}", "text": "{{valuesrg}}"},
-		{"class": "{{suits.green}}", "text": "{{valuesrg}}"},
-		{"class": "{{suits.blue}}", "text": "{{valuesby}}"},
-		{"class": "{{suits.yellow}}", "text": "{{valuesby}}"}
+		{"class": "{{%suits.red}}", "text": "{{%valuesrg}}"},
+		{"class": "{{%suits.green}}", "text": "{{%valuesrg}}"},
+		{"class": "{{%suits.blue}}", "text": "{{%valuesby}}"},
+		{"class": "{{%suits.yellow}}", "text": "{{%valuesby}}"}
 	]
 }
