--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"default": "./dist/index.js"
+		},
+		"./Game.svelte": {
+			"types": "./dist/Game.svelte.d.ts",
+			"svelte": "./dist/Game.svelte",
+			"default": "./dist/Game.svelte"
 		}
 	},
 	"files": [
