--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"prepare": "npm run package",
-		"package": "svelte-kit sync && svelte-package && postcss src/app.css -o dist/styles.css && publint",
+		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
@@ -20,6 +20,9 @@
 			"types": "./dist/Game.svelte.d.ts",
 			"svelte": "./dist/Game.svelte",
 			"default": "./dist/Game.svelte"
+		},
+		"./styles.css": {
+			"default": "./dist/styles.css"
 		}
 	},
 	"files": [
