--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/node": "^22.4.1",
 		"autoprefixer": "^10.4.15",
 		"json5": "^2.2.3",
 		"postcss": "^8.4.28",
