--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"random-words": "^1.2.0",
 		"tailwindcss": "^3.4.1"
 	}
 }
