--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"@ably/spaces": "^0.4.0",
+		"ably": "^2.3.1",
+		"random-username-generator": "^1.0.4",
 		"random-words": "^1.2.0",
 		"tailwindcss": "^3.4.1"
 	}
