--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"ably": "^2.3.1",
 		"random-username-generator": "^1.0.4",
 		"random-words": "^1.2.0",
+		"seedrandom": "^3.0.5",
 		"tailwindcss": "^3.4.1"
 	}
 }
