fix most typescript errors

--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
 	},
 	"devDependencies": {
 		"@ably/spaces": "^0.4.0",
-		"ably": "^2.3.1",
-		"random-username-generator": "^1.0.4",
-		"random-words": "^1.2.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^22.4.1",
+		"@types/seedrandom": "^3.0.8",
+		"ably": "^2.3.1",
 		"autoprefixer": "^10.4.15",
 		"json5": "^2.2.3",
 		"postcss": "^8.4.28",
 		"postcss-cli": "^10.1.0",
 		"publint": "^0.1.9",
+		"random-username-generator": "^1.0.4",
+		"random-words": "^1.2.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
